index.css
.calculator{
    margin-left: 420px;
    border-radius:20px;

    height:630px;
    width:400px;
    background-color: #AAAAAA;
    display:flex;
    padding:20px;
    position:relative;
}

.container{
    height:630px;
    width:400px;
    display:flex;
    margin:auto;
  
    display:flex;
    flex-direction: column;

}

.display{
    height:140px;
    background-color: #EEEEEE;
    overflow: hidden;
}

.special-buttons{
    height:120px;
    
    margin-top: 35px;

    display:flex;
    justify-content: space-between;

}

.clear{
    
    border-radius:10px;
  width:180px;
  height:60%;
  background-color:#DD8888
}

.delete{
    border-radius: 10px;
    height:60%;
    width:180px;
    background-color:#9999EE
}

.button-container{
    display:grid;
    height:200px;
    width:400px;
    grid-template-columns: auto auto auto auto  ;
    column-gap: 40px;
    row-gap: 20px;
}

.buttons{
    border-radius:15px;
    border:1px solid red;
    height:70px;
    width:70px;
    font-weight: bold;
    background-color: #EEEEEE;

}

.buttons:hover{
    background-color:#CCCCCC;
}

.clear:hover{
    background-color:#8b0000;
}

.delete:hover{
    background: #00008b;
}

